# yabba

./: .gitignore  CMakeLists.txt  README.md  baba.html
boxbot/: .gitignore  bog.js  index.js  next-level.sh
src/: CMakeLists.txt  main.cpp  style.qss  ybotconnection.cpp  ybotconnection.h  ycontroller.cpp  ycontroller.h  yhttp.cpp  yhttp.h  yinfodialog.cpp  yinfodialog.h  ymainwindow.cpp  ymainwindow.h  ysettings.cpp  ysettings.h  ywebsock.cpp  ywebsock.h
src/resources/: yabba.qrc  yabba.qss
